finished DSP main content

--- a/app/templates/deo-space-program/history.hbs
+++ b/app/templates/deo-space-program/history.hbs
@@ -18,15 +18,51 @@
 			<div class="col-sm-9 col-md-10 main" >
 				<div id="DSP_main">
 					<section>
-						<article class="intro"></article>
-					</section>
-					<section>
-							<article>
-							<h3>First Low Kerbin Orbit (LKO)</h3>
+						<article class="intro">
+							<h2>History</h2>
+							<p>The earliest memories that I have playing KSP was when a friend introduced it to me around July 2014 when it was still during the Aplha stage (Version 24.x if I am not wrong.) However, the earliest recorded memories began when KSP Players was launched and I dicovered it circa November 2014.</p>
+							<p>If you would like to see those early memories from all my Space Programs before DSP, then check out my <a href="http://www.ksp-players.com/en/logbook/Deovandski/posts" target="_blank">KSP Players Profile</a>. Otherwise, the official DSP history will begin below:</p>
+						</article>
+						<article>
+							<h2>First Low Kerbin Orbit (LKO)</h2>
 							<p>Where is all started... The lack of decent technology, and even basic ones like solar panels, made this mission to be quite focused on just getting to LKO and back to the ground as fast as possible. It was so fast, that snacks were not brought aboard!</p>
 							<p>Onto the technical review, due to the massive solid booster at stage 3, all horizontal speed had be added later on due to how uncontrollable the vessel would be come while achieving speed higher than Mach 0.5 during lower altitudes (21km.)
 							Stage 2 had several advantages when it came to control, but the Delta-v of that stage left control center in almost a panic state due to how little fuel we would have for a return... Luckily, 45m/s Vac Delta-v was sufficient to bring back our brave Jebediah!</p>
-							<div><iframe width="560" height="315" src="https://www.youtube.com/embed/XloMiHAWNzo" frameborder="0" allowfullscreen></iframe></div>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/XloMiHAWNzo" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>First Aircraft</h2>
+							<p>DSP is a Space Program, but that does not mean that we are restricted only to actual space... We gotta do science in kerbin too!</p>
+							<p>As you can see in the video, this is a rather simple, yet pretty maneuverable aircraft that can hit speeds up to Mach 1 (340.29 m/s or 761.21 MPH.) However, landing this sort of speed demon is not as smooth as flying it...</p>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/NSdydIs3ruY" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>First Satellite Launch</h2>
+							<p>The satellite does look ugly as it prepares for liftoff, but you gotta give it credit for being a successful one even though being quite low-tech...</p>
+							<p>The launch was not bad, and the LKO was quite nice actually even though it could only begin the horizontal velocity gain high above the atmosphere.) Also, for a first satellite launch I was quite ballsy by going straight to Mum, so I am pleased that I had very little fuel left after completing the mission, and that the marginal deviation was not so marginal in terms of space.</p>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/vVtsmvj2zd8" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>First Mum Mission</h2>
+							<p>This one goes straight to the best part: Landing on the Mum!</p>
+							<p>However, I gotta say that as the usually first body outside Kerbin that newbies travel to, it is not a piece of cake as one would think. The Gravity is quite strong, and it is always nice to have extra fuel in case things go wrong like when I picked up a spot for it...</p>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/TvgamBn89lY" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>First Minmus Mission</h2>
+							<p>Visiting the ice-cream world is quite nice (it is not made of ice-cream by the way...) Landing on this body is like going to sleep after a long day: it is so soft, that it makes you comfortable by just looking at it!</p>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/uxqlgu-Xcas" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>First Rescue Mission</h2>
+							<p>For the trained eye, you will see that this mission GUI looks quite differently, and if you did spot it, then congrats because you are seeing KSP 1.1 64 bits in all of its glory with a buttload of mods.</p>
+							<p>Now onto what this mission is about, the goal was to securely rescue a Kerbal stuck on an LKO, and bring him back to Kerbin. Since I did not have yet access to some handy Mechjeb tools, I had to manually do an interception of the vessel, by trial and error since I was too lazy to calculate values (it was right after creating my Liftoff Calculator.)</p>
+							<div><iframe width="100%" height="400" src="https://www.youtube.com/embed/_nShdW61qW4" frameborder="0" allowfullscreen></iframe></div>
+						</article>
+						<article>
+							<h2>Future Missions</h2>
+							<p>The future is a surprise, sometimes bittersweet, but a surprise nonetheless...</p>
+							<p>If those surprises are nice ones, DSP might even expand into the other bodies including a space station in Eeloo.</p>
 						</article>
 					</section>
 				</div>
