--- a/app/templates/deo-space-program/index.hbs
+++ b/app/templates/deo-space-program/index.hbs
@@ -18,15 +18,19 @@
 			<div class="col-sm-9 col-md-10 main" >
 				<div id="DSP_main">
 					<section>
-						<h3>The story of how a single man played Kerbal Space Program since its alpha back in 2015...</h3>
+						<h3>The story of how a single man played Kerbal Space Program since its alpha back in 2014...</h3>
 						<article class="intro">
 						<p>Long time ago when version 0.x dominated the KSP universe, there was a newbie who decided to purchase a copy of this game due to the interesting concept behind it.
 						Forward two years, and you would see a not-so-newbie developer who is amazed by how the community and game grew.
 						The growth followed pretty much the same rate as his gut growth due to the lack of exercise and overeating due to college and work.</p>
-						<p>Now forward to 2016, you will see the single man still single, but with less weight and more stamina. In the same way, you now see KSP in 1.1 which is in a much better shape to use 64bits while really using the latest CPUs cores to their max.</p>
+						<p>Now forward to 2016, you will see the single man still single, but with less weight and more stamina. In the same way, you now see KSP in 1.1 which is in a much better shape to use 64bits while really using the latest CPUs cores to their max.
+						However, both the game and man are not finished. We still have a fair amount of road to go before we can reach new markets (Xbox One, and PS4 for the game and cute petite girls for me.) 
+						As we travel in this road, we will both be reminded how interesting the past was while also looking forward to the near future when things will be even better.</p>
 						<p>This website contains a history of my endeavors on KSP, my achievements while also showing off my brand new (if you are reading it in 2016) TWR liftoff calculator. If you know a bit about KSP, then you will understand its purpose. 
 						If not, this calculator is meant to show the user possible engines setup and their cost based on how much dry payload (non-fuel stuff being carried), and the body where the vessel is going to liftoff.</p>
+						<p>Now it's time for some fun by seeing an unexpected bug caused by the wheels not being converted from KSP 1.0.5 to KSP 1.1</p>
 						</article>
+						<iframe width="100%" height="400" src="https://www.youtube.com/embed/UttzaFsRAxk" frameborder="0" allowfullscreen></iframe>
 					</section>
 				</div>
 			</div>
