added some padding to the DSP tables

--- a/app/styles/_dsp.scss
+++ b/app/styles/_dsp.scss
@@ -161,6 +161,8 @@ $dsp-background-color: hsla(190, 70%, 60%, 0.97);
 	margin-right: auto;   
 	tr {
 		th {
+			padding-left: 5px;
+			padding-right: 5px;
 			height: 50px;
 			text-align: center;
 			border-style: solid;
