Update DSP Calculator quick notes

--- a/app/templates/deo-space-program/liftoff-calculator.hbs
+++ b/app/templates/deo-space-program/liftoff-calculator.hbs
@@ -60,10 +60,11 @@
              You may add a seconds stage as the dry mass in order to calculate how powerful and costly your first stage needs to be. 
              If you need to know how much Delta-v you will have, search instead for Mechjeb2.
              </li>
-             <li><strong>"-1"</strong> Values implies issues with calculating. If all of them displays <strong>"-1"</strong> , please revise your input. 
-             Max Vessel mass allowed is 1 billion tons, Burn time is 550 seconds and max TWR is 999.</li>
+             <li><strong>"-1"</strong> Values implies issues with calculating. If all of them displays <strong>"-1"</strong> , please revise your input so that it is positive values and within the max values allowed.
+             </li>
+             <li>Max Vessel mass allowed is 1 billion tons, Burn time is 550 seconds and max TWR is 999.</li>
              <li>Source code for this calculator can be found at <a href="https://github.com/Deovandski/DeoPersonalWebsite/blob/master/app/controllers/deo-space-program/liftoff-calculator.js" target="_blank">Github</a>.</li>
-             <li> In case you did not know: <label>k</label> implies thousands, <label>kk</label> millions, <label>b</label> implies billions.</li> 
+             <li>In case you did not know: <label>k</label> implies thousands, <label>kk</label> millions, <label>b</label> implies billions.</li> 
             </ol>
             <div class="dsp_back_top">
               <label><a href="deoSpaceProgram/liftoffCalculator#radial">Radial Engines</a></label>
