added final presentation video

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,6 +4,7 @@
 			<h2>Welcome to my Personal Website!</h2>
 			<p>This website hosts several projects and an archive of my past work.</p>
 			<p>A note for my <strong>COMM 261</strong> colleagues:<br><br>This website does not include any of the PHP requirements, but that was on purpose since I will submit another website in order to fulfill that specific requirement. Also, the initial website load may have been rather slow, but that was due to the Dyno in which this website runs and not because of my code. For more information, please visit the <a href="https://github.com/Deovandski/DeoPersonalWebsite">Deo's website</a> repo on Github.</p>
+			<iframe width="100%" height="400" src="https://www.youtube.com/embed/eeAQ2ZNo67U" frameborder="0" allowfullscreen></iframe>
 		</section>
 	</div>
 </div>
