about page content added

--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -1,8 +1,10 @@
 <div id="DPW_BG_index" class="DPW_BG">
 	<div id="DPW_main" class="container">
 		<section>
-			<p>About Page</p>
-			<p>Later I will finish this page...</p>
+			<h1>About Page</h1>
+			<h3>Hey! It's me, Deo!</h3>
+			<p>Not much to talk about myself, so feel free to stalk me instead since most of my online stuff is set to public availability anyway...</p>
+			<img src="http://i.imgur.com/jvU1ztS.png" alt="KSP rocks!" width="100%" />
 		</section>
 	</div>
 </div>
